Manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatroom
  labels:
      app: chatroom
spec:
  selector:
    matchLabels:
      app: chatroom
  template:
    metadata:
      labels:
        app: chatroom
    spec:
      imagePullSecrets:
          - name: ghcr
      containers:
      - name: chatroom
        image: ghcr.io/tianvan/chatroom:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
