Manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatroom
spec:
  selector:
    app: chatroom
  ports:
  - port: 80
    targetPort: 80
