Manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatroom
spec:
  ingressClassName: contour
  rules:
    - host: chatroom.52lm.com
      http:
        paths:
          - backend:
              service:
                  name: chatroom
                  port:
                      number: 80
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - chatroom.52lm.com
      secretName: tls-52lm-com
